Naming + adding double digits
Functionality for double digits in JS & switch case for HTML

--- a/index.html
+++ b/index.html
@@ -17,41 +17,41 @@
     <div id="clock">
         <div id="hours">
             <form name="hours-first" action="">
-                <input type="radio" value="s1" id="h10" />
-                <input type="radio" value="s2" id="h20" />
-                <input type="radio" value="s4" id="h40" />
+                <input type="radio" name="hours-first" value="s1" id="h10" />
+                <input type="radio" name="hours-first" value="s2" id="h20" />
+                <input type="radio" name="hours-first" value="s4" id="h40" />
             </form>
             <form name="hours-last" action="">
-                <input type="radio" value="s1" id="h01" />
-                <input type="radio" value="s2" id="h02" />
-                <input type="radio" value="s4" id="h04" />
-                <input type="radio" value="s4" id="h08" />
+                <input type="radio" name="hours-last" value="s1" id="h01" />
+                <input type="radio" name="hours-last" value="s2" id="h02" />
+                <input type="radio" name="hours-last" value="s4" id="h04" />
+                <input type="radio" name="hours-last" value="s4" id="h08" />
             </form>
         </div>
         <div id="minutes">
             <form name="minutes-first" action="">
-                <input type="radio" value="s1" id="m10" />
-                <input type="radio" value="s2" id="m20" />
-                <input type="radio" value="s4" id="m40" />
+                <input type="radio" name="minutes-first" value="s1" id="m10" />
+                <input type="radio" name="minutes-first" value="s2" id="m20" />
+                <input type="radio" name="minutes-first" value="s4" id="m40" />
             </form>
             <form name="minutes-last" action="">
-                <input type="radio" value="s1" id="m01" />
-                <input type="radio" value="s2" id="m02" />
-                <input type="radio" value="s4" id="m04" />
-                <input type="radio" value="s4" id="m08" />
+                <input type="radio" name="minutes-last" value="s1" id="m01" />
+                <input type="radio" name="minutes-last" value="s2" id="m02" />
+                <input type="radio" name="minutes-last" value="s4" id="m04" />
+                <input type="radio" name="minutes-last" value="s4" id="m08" />
             </form>
         </div>
         <div id="seconds">
             <form name="seconds-first" action="">
-                <input type="radio" value="s1" id="s10" />
-                <input type="radio" value="s2" id="s20" />
-                <input type="radio" value="s4" id="s40" />
+                <input type="radio" name="seconds-first" value="s1" id="s10" />
+                <input type="radio" name="seconds-first" value="s2" id="s20" />
+                <input type="radio" name="seconds-first" value="s4" id="s40" />
             </form>
             <form name="seconds-last" action="">
-                <input type="radio" value="s1" id="s01" />
-                <input type="radio" value="s2" id="s02" />
-                <input type="radio" value="s4" id="s04" />
-                <input type="radio" value="s4" id="s08" />
+                <input type="radio" name="seconds-last" value="s1" id="s01" />
+                <input type="radio" name="seconds-last" value="s2" id="s02" />
+                <input type="radio" name="seconds-last" value="s4" id="s04" />
+                <input type="radio" name="seconds-last" value="s4" id="s08" />
             </form>
         </div>
     </div>
