--- a/index.html
+++ b/index.html
@@ -16,42 +16,41 @@
 <body onload="updateTime()">
     <div id="clock">
         <div id="hours">
-            <form name="hours-first" action="">
-                <input type="radio" name="hours-first" value="s1" id="h10" />
-                <input type="radio" name="hours-first" value="s2" id="h20" />
-                <input type="radio" name="hours-first" value="s4" id="h40" />
+            <form name="hoursFirst" action="">
+                <input type="radio" name="hours-first" value="h10" id="h10" />
+                <input type="radio" name="hours-first" value="h20" id="h20" />
             </form>
-            <form name="hours-last" action="">
-                <input type="radio" name="hours-last" value="s1" id="h01" />
-                <input type="radio" name="hours-last" value="s2" id="h02" />
-                <input type="radio" name="hours-last" value="s4" id="h04" />
-                <input type="radio" name="hours-last" value="s4" id="h08" />
+            <form name="hourLast" action="">
+                <input type="radio" name="hours-last" value="h01" id="h01" />
+                <input type="radio" name="hours-last" value="h02" id="h02" />
+                <input type="radio" name="hours-last" value="h04" id="h04" />
+                <input type="radio" name="hours-last" value="h08" id="h08" />
             </form>
         </div>
         <div id="minutes">
-            <form name="minutes-first" action="">
-                <input type="radio" name="minutes-first" value="s1" id="m10" />
-                <input type="radio" name="minutes-first" value="s2" id="m20" />
-                <input type="radio" name="minutes-first" value="s4" id="m40" />
+            <form name="minutesFirst" action="">
+                <input type="radio" name="minutes-first" value="m10" id="m10" />
+                <input type="radio" name="minutes-first" value="m20" id="m20" />
+                <input type="radio" name="minutes-first" value="m40" id="m40" />
             </form>
-            <form name="minutes-last" action="">
-                <input type="radio" name="minutes-last" value="s1" id="m01" />
-                <input type="radio" name="minutes-last" value="s2" id="m02" />
-                <input type="radio" name="minutes-last" value="s4" id="m04" />
-                <input type="radio" name="minutes-last" value="s4" id="m08" />
+            <form name="minutesLast" action="">
+                <input type="radio" name="minutes-last" value="m01" id="m01" />
+                <input type="radio" name="minutes-last" value="m02" id="m02" />
+                <input type="radio" name="minutes-last" value="m04" id="m04" />
+                <input type="radio" name="minutes-last" value="m08" id="m08" />
             </form>
         </div>
         <div id="seconds">
-            <form name="seconds-first" action="">
-                <input type="radio" name="seconds-first" value="s1" id="s10" />
-                <input type="radio" name="seconds-first" value="s2" id="s20" />
-                <input type="radio" name="seconds-first" value="s4" id="s40" />
+            <form name="secondsFirst" action="">
+                <input type="radio" name="seconds-first" value="s10" id="s10" />
+                <input type="radio" name="seconds-first" value="s20" id="s20" />
+                <input type="radio" name="seconds-first" value="s40" id="s40" />
             </form>
-            <form name="seconds-last" action="">
-                <input type="radio" name="seconds-last" value="s1" id="s01" />
-                <input type="radio" name="seconds-last" value="s2" id="s02" />
-                <input type="radio" name="seconds-last" value="s4" id="s04" />
-                <input type="radio" name="seconds-last" value="s4" id="s08" />
+            <form name="secondsLast" action="">
+                <input type="radio" name="seconds-last" value="s01" id="s01" />
+                <input type="radio" name="seconds-last" value="s02" id="s02" />
+                <input type="radio" name="seconds-last" value="s04" id="s04" />
+                <input type="radio" name="seconds-last" value="s04" id="s08" />
             </form>
         </div>
     </div>
