Last numbers work
kind of

--- a/index.html
+++ b/index.html
@@ -41,16 +41,16 @@
             </form>
         </div>
         <div id="seconds">
-            <form name="secondsFirst" action="">
-                <input type="radio" name="seconds-first" value="s10" id="s10" />
-                <input type="radio" name="seconds-first" value="s20" id="s20" />
-                <input type="radio" name="seconds-first" value="s40" id="s40" />
+            <form name="secondsFirst">
+                <input type="checkbox" id="s10" />
+                <input type="checkbox" id="s20" />
+                <input type="checkbox" id="s40" />
             </form>
-            <form name="secondsLast" action="">
-                <input type="radio" name="seconds-last" value="s01" id="s01" />
-                <input type="radio" name="seconds-last" value="s02" id="s02" />
-                <input type="radio" name="seconds-last" value="s04" id="s04" />
-                <input type="radio" name="seconds-last" value="s04" id="s08" />
+            <form name="secondsLast">
+                <input type="checkbox" id="s01" />
+                <input type="checkbox" id="s02" />
+                <input type="checkbox" id="s04" />
+                <input type="checkbox" id="s08" />
             </form>
         </div>
     </div>
