--- a/index.html
+++ b/index.html
@@ -17,27 +17,27 @@
     <div id="clock">
         <div id="hours">
             <form name="hoursFirst" action="">
-                <input type="radio" name="hours-first" value="h10" id="h10" />
-                <input type="radio" name="hours-first" value="h20" id="h20" />
+                <input type="checkbox" id="h10" />
+                <input type="checkbox" id="h20" />
             </form>
             <form name="hourLast" action="">
-                <input type="radio" name="hours-last" value="h01" id="h01" />
-                <input type="radio" name="hours-last" value="h02" id="h02" />
-                <input type="radio" name="hours-last" value="h04" id="h04" />
-                <input type="radio" name="hours-last" value="h08" id="h08" />
+                <input type="checkbox" id="h01" />
+                <input type="checkbox" id="h02" />
+                <input type="checkbox" id="h04" />
+                <input type="checkbox" id="h08" />
             </form>
         </div>
         <div id="minutes">
             <form name="minutesFirst" action="">
-                <input type="radio" name="minutes-first" value="m10" id="m10" />
-                <input type="radio" name="minutes-first" value="m20" id="m20" />
-                <input type="radio" name="minutes-first" value="m40" id="m40" />
+                <input type="checkbox" id="m10" />
+                <input type="checkbox" id="m20" />
+                <input type="checkbox" id="m40" />
             </form>
             <form name="minutesLast" action="">
-                <input type="radio" name="minutes-last" value="m01" id="m01" />
-                <input type="radio" name="minutes-last" value="m02" id="m02" />
-                <input type="radio" name="minutes-last" value="m04" id="m04" />
-                <input type="radio" name="minutes-last" value="m08" id="m08" />
+                <input type="checkbox" id="m01" />
+                <input type="checkbox" id="m02" />
+                <input type="checkbox" id="m04" />
+                <input type="checkbox" id="m08" />
             </form>
         </div>
         <div id="seconds">
