--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
 <body onload="updateTime()">
     <div id="clock">
         <div id="hours">
-            <form name="hoursFirst" action="">
+            <form name="hoursFirst">
                 <input type="checkbox" id="h10" />
                 <input type="checkbox" id="h20" />
             </form>
-            <form name="hourLast" action="">
+            <form name="hourLast">
                 <input type="checkbox" id="h01" />
                 <input type="checkbox" id="h02" />
                 <input type="checkbox" id="h04" />
@@ -28,12 +28,12 @@
             </form>
         </div>
         <div id="minutes">
-            <form name="minutesFirst" action="">
+            <form name="minutesFirst">
                 <input type="checkbox" id="m10" />
                 <input type="checkbox" id="m20" />
                 <input type="checkbox" id="m40" />
             </form>
-            <form name="minutesLast" action="">
+            <form name="minutesLast">
                 <input type="checkbox" id="m01" />
                 <input type="checkbox" id="m02" />
                 <input type="checkbox" id="m04" />
